# gantt_chart

./: .gitignore  README.md  pyproject.toml
data/proposal/: gantt_data.csv  plot_chart.py
gantt_chart/: __init__.py
